     https://rt.cpan.org/Ticket/Display.html?id=70037

   - TIFF now uses wrapper functions of the correct types to avoid casts
     https://rt.cpan.org/Ticket/Display.html?id=69912

   - the callback IO object did its own buffering, controlled by the
     maxbuffer parameter supplied to the read() and write() methods.
     This buffering has been removed, to avoid redundancy with the
     common io_glue buffering.

   - the callback IO object new tests the result of calling the close
     callback, which should return true for success.

   - the PNM reader did its own buffering.  This buffering has been
     removed to avoid redundancy with the common io_glue buffering.

To do:

 - make sure i_io_close() is called and the result is checked

 - remove other buffering

 - allow _get_writer() to produce unbuffered writers

 - coverage/functional tests for the buffering code

 - document the new Imager::IO methods

 - document the io_glue C callbacks properly

 - document the Imager::io_new_cb() callback functions properly.

 - fix buffered seeks

Imager 0.86
===========

 - add simple tests for the Imager::Test test_image generators

Imager 0.85 - 29 Aug 2011
===========

The main changes in the release versus 0.84 are:

 - on 64-bit systems, 64-bit types are consistently used for image
   dimensions and co-ordinated, and for memory block sizes.

 - handle IFD loops in TIFF files correctly.  Previously this would
   lead to an infinite loop.

Bug fixes:

 - fix the link in the getheight() entry in the method index

Imager 0.84_02 - 22 Aug 2011
==============

Development release, this will become 0.85 if CPAN testers is
favourable.

Bug fixes:

 - the image file limits set by set_file_limits() weren't being
   checked when reading TIFF files.
   https://rt.cpan.org/Ticket/Display.html?id=69915

 - Provide more information about file format module load errors on a
   failed image file read() or write().
   https://rt.cpan.org/Ticket/Display.html?id=69194
